--- a/songs/Breaking_of_the_Fellowship.html
+++ b/songs/Breaking_of_the_Fellowship.html
@@ -412,6 +412,16 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1>Breaking of the Fellowship</h1>
 <p><b>Original artist(s): </b>Howard Shore</p>
 <p><b>Transcript writer: </b>Istari</p>
