--- a/songs/MDZS_Wangxian_audio_drama_ver.html
+++ b/songs/MDZS_Wangxian_audio_drama_ver.html
@@ -412,10 +412,22 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1>[MDZS] Wangxian (audio drama ver.)</h1>
 <p><b>Original artist(s): </b>arr. by K.1yn</p>
 <p><b>Transcript writer: </b>nikudons</p>
 <p><b>Musical key: </b>C</p>
+  <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/H7Zvy-ZReqQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 <div id="transcript">
 
 <hr />
