--- a/songs/Stardew_Valley_-_Wind_can_be_Still_Winter.html
+++ b/songs/Stardew_Valley_-_Wind_can_be_Still_Winter.html
@@ -412,6 +412,16 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1>Stardew Valley - Wind can be Still (Winter)</h1>
 <p><b>Original artist(s): </b>Concernedape</p>
 <p><b>Transcript writer: </b>Isa Discord:IsaDaCool#4840</p>
