--- a/songs/Alone0.html
+++ b/songs/Alone0.html
@@ -388,6 +388,16 @@ table.silent .ON-0.button {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1>Alone</h1>
 <p><b>Original artist(s): </b>Marshmello</p>
 <p><b>Transcript writer: </b>kai00</p>
