--- a/songs/thank_u_next.html
+++ b/songs/thank_u_next.html
@@ -19,6 +19,7 @@ body {
   font-size: 12pt;
 }
 
+
 /* <!-- Song title --> */
 h1, svg text.title {
     font-family: "Noto Sans", "Noto Sans CJK JP", "Noto Sans CJK KR", "Noto Sans CJK SC", "Noto Sans CJK TC", "Avenir", Arial, sans-serif;
@@ -412,6 +413,16 @@ svg rect.note-background {
 </style>
 <meta charset="utf-8"/></head>
 <body>
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../assets/images/sky-music-logo-sheets.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
 <h1>thank u, next</h1>
 <p><b>Original artist(s): </b>Ariana Grande</p>
 <p><b>Transcript writer: </b>iara</p>
