--- a/songs/Lyras Song.html
+++ b/songs/Lyras Song.html
@@ -6,7 +6,7 @@
 <title>Lyra's Song (Fairy Tail)</title>
 <script type="text/javascript" src="/js/navigationTableScript.js"></script>
 <script type="text/javascript" src="/js/sheetDarkModeScript.js"></script>
-<script type="text/javascript" src="/js/sheetDownloadScript.js"></script>
+<script type="text/javascript" src="/js/sheetDownloaderScript.js"></script>
 <style type="text/css">
 @media (prefers-reduced-motion: reduce) {
   html {
