--- a/songs/popular/graduation_photo.html
+++ b/songs/popular/graduation_photo.html
@@ -2,7 +2,9 @@
 <html>
 <head> 
 <script src="/js/sheetDarkModeScript.js"> </script>
-<script src="/js/sheetDownloaderScript.js"> </script> <title>Graduation Photo</title> <link href="../css/main.css" rel="stylesheet" /> <meta charset="utf-8"/> </head>
+<script src="/js/sheetDownloaderScript.js"> </script>
+<title>Graduation Photo</title> 
+<meta charset="utf-8"/> </head>
 <body>
 
   <table id="navigation">
