--- a/songs/videogames/c418_sweden.html
+++ b/songs/videogames/c418_sweden.html
@@ -2,7 +2,9 @@
 <html>
 <head> 
 <script src="/js/sheetDarkModeScript.js"> </script>
-<script src="/js/sheetDownloaderScript.js"> </script> <title>Sweden (Minecraft)</title> <link href="../css/main.css" rel="stylesheet" /> <meta charset="utf-8"/></head>
+<script src="/js/sheetDownloaderScript.js"> </script>
+<title>Sweden (Minecraft)</title>
+<meta charset="utf-8"/></head>
 <body>
 <table id="navigation">
   <tr>
