--- a/songs/anime/Carole_&_Tuesday__The_Loneliest_Girl.html
+++ b/songs/anime/Carole_&_Tuesday__The_Loneliest_Girl.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <meta name="date.created" content="2020-08-11 04:45:24.956582"/>
 <title>The Loneliest Girl</title>
-<script type="text/javascript" src="/js/navigationTableScript.js"></>
+<script type="text/javascript" src="/js/navigationTableScript.js"></script>
 <script type="text/javascript" src="/js/sheetDarkModeScript.js"></script>
 <script type="text/javascript" src="/js/sheetDownloaderScript.js"></script>
 <style type="text/css">
